@startuml
'https://plantuml.com/class-diagram
!pragma layout smetana

package SmartHome.AggregateActuator {
    class Actuator <<Entity>> <<Root>> {
        - _deviceID : DeviceID
        - _actuatorTypeID : ActuatorTypeID
        - _actuatorModelID : ActuatorModelID
        - _value : Value
        - _name : ActuatorName
        - _modelPath : ModelPath
    }
}

package SmartHome.ValueObject {
    class DeviceID <<ValueObject>> <<ID>> {
        - _id : String
    }

    class ActuatorTypeID <<ValueObject>> <<ID>> {
        - _id : String
    }

    class ActuatorModelID <<ValueObject>> <<ID>> {
        - _id : String
    }

    class ActuatorName <<ValueObject>> {
        - _name : String
    }

    class ModelPath <<ValueObject>> {
        - _path : String
    }

    interface Value <<ValueObject>>{
    }
}

Actuator "*" -- "1" ActuatorTypeID : has
Actuator "*" -- "1" ActuatorModelID : has
Actuator "1" -- "1" Value : has
Actuator "*" -- "1" DeviceID : has
Actuator "*" -- "1" ActuatorName : has
Actuator "*" -- "1" ModelPath : has
@enduml